
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ memmem (char*,int,char const*,int ) ;
 int strlen (char const*) ;
 unsigned long strtoul (char*,char**,int) ;

unsigned long get_kernel_addr_xenial(char* buffer, int size) {
 const char* needle1 = "Freeing unused";
 char* substr = (char*)memmem(&buffer[0], size, needle1, strlen(needle1));
 if (substr == ((void*)0)) {
  return 0;
 }

 int start = 0;
 int end = 0;
 for (start = 0; substr[start] != '-'; start++);
 for (end = start; substr[end] != '\n'; end++);

 const char* needle2 = "ffffff";
 substr = (char*)memmem(&substr[start], end - start, needle2, strlen(needle2));
 if (substr == ((void*)0)) {
  return 0;
 }

 char* endptr = &substr[16];
 unsigned long r = strtoul(&substr[0], &endptr, 16);

 r &= 0xfffffffffff00000ul;
 r -= 0x1000000ul;

 return r;
}
